# Retro-Lite-CM4-Dock

./: CMakeLists.txt  LICENSE  README.md  convert_boxart.sh  fonts.c  game_end.py  get_image.py  install_dock.sh  send_data.py  sendimg.py  splash_statistics.py  ssd1351.c
CAD/: Button.stl  Dock - Main Housing.stl  Lid.stl  Retro-Lite-Dock-PCB-Front.sch  Retro-Lite-Dock-PCB_Front.brd  Retro-Lite-Dock-PCB_Pico_Version.brd  Retro-Lite-Dock-PCB_Pico_Version.sch
runcommand_hooks/: runcommand-onend.sh  runcommand-onlaunch.sh  runcommand-onstart.sh
src/: fonts.c  fonts.h  main.c  pi_stats.c  splash.h  splashscreen.c  ssd1351.c  ssd1351.h
stats/: gamestats.py  history.py  log.py  main.py  schedule.py  session.py  title.py  top.py
